infrastructure/infra/grafana/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
labels:
  istio-injection: enabled
