infrastructure/infra/grafana/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: grafana
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.local.barisceviz.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: grafana
spec:
  hosts:
    - "grafana.local.barisceviz.com"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
